<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#ffffff"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/login_avtar"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="33dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:hint="@string/jon_gmail_com"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#dddd"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#dddd"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login_cap"
                android:layout_marginTop="20dp"
                android:id="@+id/btn_login"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/progressbar"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/don_t_have_account"
                android:textAlignment="center"
                android:id="@+id/tv_signup"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>