<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddressFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:id="@+id/action_bar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:foreground="@drawable/circle_ripple_effect"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:id="@+id/img_back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deliver_to"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:foreground="@drawable/circle_ripple_effect"
            android:src="@drawable/sharp_question_mark_24"
            android:id="@+id/img_qustion"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/enter_delivery_address"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:padding="10dp"
                android:textColor="@color/black"
                android:inputType="textCapWords"
                android:layout_marginStart="10dp"
                android:hint="Your name..."
                android:textSize="15sp"
                android:id="@+id/edit_name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:padding="10dp"
                android:textColor="@color/black"
                android:inputType="textCapSentences"
                android:layout_marginStart="10dp"
                android:hint="Your address"
                android:textSize="15sp"
                android:id="@+id/edit_address"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:padding="10dp"
                android:textColor="@color/black"
                android:inputType="textCapSentences"
                android:layout_marginStart="10dp"
                android:hint="Your city"
                android:textSize="15sp"
                android:id="@+id/edit_city"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/pin_code"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:padding="10dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:hint="Your pin code"
                android:textSize="15sp"
                android:id="@+id/edit_pin_code"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#ddd"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#ddd"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bg"
            android:layout_marginTop="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/use_my_profile_details"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_user_profile"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/user_progress_bar"
                android:visibility="gone"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:id="@+id/btn_procced"
            android:foreground="@drawable/corner_round_ripple_effect"
            android:background="@drawable/card_controller_bg"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/proceed"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>